Added comments for all scripts, deleted unused scripts in the scripts directory

--- a/install
+++ b/install
@@ -2,6 +2,7 @@
 
 DIRECTORY="$HOME/dotfiles"
 
+# Is the user setting these dotfiles for a laptop or desktop environment?
 echo "Installing for laptop? (y/n)"
 read -r choice
 
@@ -11,8 +12,11 @@ else
     exclude_dirs=("i3laptop" "scripts" "alacrittylaptop")
 fi
 
+# If the directory ~/dotfiles does not exist, stop.
 cd "$DIRECTORY" || { echo "Failed to change to $DIRECTORY"; exit 1; }
 
+# For each file in the ~/dotfiles directory, use stow on all sub-directories excluding the directories
+# depending on the user choice on line 7 
 for dir in *; do
     if [[ -d "$dir" ]]; then
         if [[ " ${exclude_dirs[*]} " == *" $dir "* ]]; then
